# repollo-project

./: README.md  docker-compose.yaml
backend/: Dockerfile  README.md  pyproject.toml  run_server.py  setup_and_test.py  test_content_moderation.py  test_simple.py
backend/src/: config.py  main.py  responses.py  test_llm_validation.py  test_research_agent.py
backend/src/agents/: __init__.py  content_moderator.py  models.py  research_agent.py
backend/src/handlers/: __init__.py  moderation.py  research.py
backend/src/utils/: json.py
frontend/: .gitignore  Dockerfile  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  page.tsx
frontend/src/app/api/agents/: route.ts
frontend/src/app/api/moderation/analyze/: route.ts
frontend/src/app/api/moderation/batch-analyze/: route.ts
frontend/src/app/api/research/query/: route.ts
frontend/src/components/: AgentsOverview.tsx  BatchModerationResults.tsx  ModerationAgent.tsx  ModerationResults.tsx  ResearchAgent.tsx
frontend/src/lib/: config.ts
frontend/src/types/: agents.ts
