[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "orjson>=3.10.18",
    "pydantic>=2.10.4",
    "pydantic-ai>=0.0.19",
    "pydantic-extra-types>=2.10.1",
    "pydantic-settings>=2.7.0",
    "openai>=1.84.0",
    "uvicorn>=0.34.3",
    "pillow>=10.0.0",
    "python-multipart>=0.0.20",
]
